# PAIRLIVE

./: .gitignore  PAIRLIVE-PROJECT-CONCEPT.md  README.md
.github/workflows/: ci.yml  deploy.yml  mobile.yml
backend/: .env.example  README.md  jest.config.ts  package-lock.json  package.json  tsconfig.json
backend/elara/: Cargo.toml
backend/elara/src/: lib.rs  media.rs  session.rs  transport.rs
backend/prisma/: schema.prisma
backend/scripts/: schema.sql
backend/src/: server.ts
backend/src/beta/: beta-feedback.ts  feature-flags.ts  index.ts
backend/src/config/: database.ts  index.ts  redis.ts
backend/src/controllers/: auth.controller.ts  coin.controller.ts  feedback.controller.ts  friend.controller.ts  matching.controller.ts  report.controller.ts  session.controller.ts  user.controller.ts
backend/src/middleware/: auth.middleware.ts
backend/src/monitoring/: alerting.ts  health.ts  index.ts  metrics.ts  request-tracker.ts
backend/src/routes/: auth.routes.ts  beta.routes.ts  coin.routes.ts  feedback.routes.ts  friend.routes.ts  index.ts  matching.routes.ts  report.routes.ts  session.routes.ts  user.routes.ts
backend/src/security/: index.ts  input-sanitizer.ts  rate-limiter.ts  secrets.ts
backend/src/services/: auth.service.ts  (+10 more)
backend/tests/: setup.ts
docs/: API-SPECIFICATION.md  FOLDER-STRUCTURE.md  WIREFRAMES.md
infrastructure/: README.md
mobile/: .env.example  BUILD_APK.md  README.md  app.json  babel.config.js  build-apk.bat  package-lock.json  package.json  setup-android.bat  tsconfig.json
mobile/android/: gradle.properties  gradlew  gradlew.bat  settings.gradle
mobile/src/: App.tsx
(+62 files in other folders)
